RQ-544: fix layout overflow due to react tour lib (#767)

--- a/app/src/layouts/DashboardLayout/DashboardLayout.css
+++ b/app/src/layouts/DashboardLayout/DashboardLayout.css
@@ -44,7 +44,7 @@
 .app-main-content,
 #dashboardMainContent {
   height: 100%;
-  overflow: auto;
+  overflow: auto !important;
 }
 
 .app-layout .ant-layout-footer {
